Added number-game to nbacksimon.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
 
         <p><a href="math/fractalexplorer/"><img src="images/fractalexplorer.png" alt="Image of Fractal Explorer" title="" /></a></p>
 
+        <h2><a href="math/nbacksimon/">N-Back Simon Says</a></h2>
+
+        <p>Simon Says exercises memory. I have added a number-only version where the player must memorize increasing-length strings of numbers.</p>
+
+        <p>Built on <a href="https://github.com/kellyk/javascript-simon">Javascript Simon</a> by <a href="http://kellyking.me">Kelly King</a>.</p>
+
+        <p><a href="math/nbacksimon/"><img src="images/nbacksimon.png" alt="Image of N-Back Simon Says" title="" /></a></p>        
+
         <h2><a href="math/mazenavigator/">Maze Navigator</a></h2>
 
         <p>Credit to <a href="https://github.com/goshdarngames/HTML5-Maze">GoshDarnGames</a>.</p>
