Updated wolffence game to hundredboard.

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 
         <p><a href="math/shapehuntcardinality/"><img src="images/shapehuntcardinality.png" alt="Image of Shape Hunt Cardinality Game" title="" /></a></p>
 
-        <h2><a href="math/wolffencenumberguessing/">Wolf Fence Number Guessing Game</a></h2>
+        <h2><a href="math/hundredboard/">Hundred Board Guessing Game</a></h2>
 
-        <p>Guess the number, with the computer giving greater-than/less-than hints.</p>
+        <p>Click on the odds, evens, or factors. Also a Wolf-Fence Number guessing game, with the computer giving greater-than/less-than hints.</p>
 
-        <p><a href="math/wolffencenumberguessing/"><img src="images/wolffencenumberguessing.png" alt="Image of Wolf Fence Number Guessing" title="" /></a></p>
+        <p><a href="math/hundredboard/"><img src="images/hundredboard.png" alt="Image of Hundred Board Guesing Game" title="" /></a></p>
 
         <h2><a href="reading/alphabetrace/">Alphabet Race</a></h2>
 
