Updates to number mandala.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
             <p>Generates a number mandela for exploring primes and factors.</p>
 
-            <p>Credit to <a href="http://12xspiral.com/">Joey Grether</a> for the idea.</p>
+            <p>Credit to <a href="http://12xspiral.com/">Joey Grether</a> for the idea. Combines memes from <a href="http://krazydad.com/tutorials/circles/">KrazyDad</a>, <a href="http://jsfiddle.net/jingshaochen/xJc7M/">jingshaochen</a>, <a href="http://www.dhtmlgoodies.com/tutorials/canvas-clock/">dhtmlgoodies</a>, <a href="http://www.script-tutorials.com/html5-clocks/">script-tutorials</a>, and <a href="http://www.javascripter.net/faq/numberisprime.htm">javascripter</a>.</p>
 
             <p><a href="math/numbermandala/"><img src="images/numbermandela.png" alt="Image of Number Mandela" title="" /></a></p>
 
