Added breaks to switch statement.

--- a/math/numbermandala/index.html
+++ b/math/numbermandala/index.html
@@ -739,6 +739,7 @@ var renderPreset = function() {
           $('#primecolor').val('#ffff00');
           $('#showLines').prop('checked', false);
           $('#decoration').val('circles');
+          break;
         case "35ticks9connect":
           $('#ticksPerRevolution').val('35');
           $('#numberOfRevolutions').val('64');
@@ -755,6 +756,7 @@ var renderPreset = function() {
           $('#primecolor').val('#ffff00');
           $('#showLines').prop('checked', false);
           $('#decoration').val('circles');
+          break;
         case "30ticks6connect":
           $('#ticksPerRevolution').val('30');
           $('#numberOfRevolutions').val('65');
@@ -771,6 +773,7 @@ var renderPreset = function() {
           $('#primecolor').val('#ffff00');
           $('#showLines').prop('checked', true);
           $('#decoration').val('');
+          break;
         case "default":
           break;
         default:
