New numbermandela image and sentence for onewordsentencechanger.

--- a/reading/onewordsentencechanger/index.html
+++ b/reading/onewordsentencechanger/index.html
@@ -204,8 +204,11 @@ wordgroups["verbs"] = verbs;
 
 var sentences = [
     "I saw a [animals] at the zoo."
+    ,"There are [animals]s in this world."
     ,"The [occupations] helps us."
+    ,"I can be a [occupations]."
     ,"We ate [foods] for lunch."
+    ,"I like to eat [foods]."
     ,"The person put on [clothes]."
     ,"A [color] balloon floats in the air."
     ,"I listened to the [instruments] play."
