Added coordinate labels around the box.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
 
             <p><a href="math/basetenblocks/"><img src="images/basetenblocks.png" alt="Image of Base-10 Blocks" title="" /></a></p>
 
+            <h2><a href="math/coordinates/">Coordinate Finder</a></h2>
+
+            <p>Made this when my son wanted to play Battleship, but was having trouble understanding X and Y coordinates.</p>
+
+            <p><a href="math/coordinates/"><img src="images/coordinates.png" alt="Image of Coordinate Finder" title="" /></a></p>
+
             <h2><a href="math/fractalexplorer/">Fractal Explorer</a></h2>
 
             <p>For exploring binary trees, dragon curves, Mandelbrot, and Julia sets.</p>
