--- a/index.html
+++ b/index.html
@@ -103,6 +103,20 @@
 
             <p><a href="math/booleaniching/"><img src="images/booleaniching.png" alt="Image of Boolean iChing" title="" /></a></p>
 
+            <h1>Science</h1>
+
+            <h2><a href="science/colormatcher/">Color Matcher</a></h2>
+
+            <p>Add red, green, blue values in hexadecimal until you match the background color. Inspired by <a href="https://github.com/LeaVerou/whathecolor">What the Color</a> by <a href="http://lea.verou.me/">Lea Verou</a>.</p>
+
+            <p><a href="science/colormatcher/"><img src="images/colormatcher.png" alt="Image of color matcher" title="" /></a></p>
+
+            <h2><a href="science/daysoftheweek/">Days of the Week Carousel</a></h2>
+
+            <p>Carousel of the days of the week with the planets for which they are named.</p>
+
+            <p><a href="science/daysoftheweek/"><img src="images/daysoftheweek.png" alt="Image of Days of the Week Carousel" title="" /></a></p>
+
         </div>
 
         <div style="float:right;width:45%">
@@ -182,12 +196,6 @@
             <p>Credit <a href="https://ludios.org/bayes/">ludios.org</a>.</p>
 
             <p><a href="math/bayestheorem/"><img src="images/bayestheorem.png" alt="Image of Bayes Theorem Calculator" title="" /></a></p>
-
-            <h2><a href="science/earth/daysoftheweek/">Days of the Week Carousel</a></h2>
-
-            <p>Carousel of the days of the week with the planets for which they are named.</p>
-
-            <p><a href="science/earth/daysoftheweek/"><img src="images/daysoftheweek.png" alt="Image of Days of the Week Carousel" title="" /></a></p>
 
             <h2><a href="math/binarycountingmachine/">Binary Counting Machine</a></h2>
 
